# DiskreteStrukturen

./: .gitignore  CMakeLists.txt
p1/: CMakeLists.txt  main.cpp
p1/include/: grayCode.hpp
p2/: CMakeLists.txt  main.cpp
p2/include/: group.hpp  permutation.hpp  permutation.hpp.autosave
p3/: CMakeLists.txt  main.cpp
p3/include/: Orbit.hpp
presentations/: p1.tex  p2.tex
